editors/cadl/tree-sitter-cadl/grammar.js
// Structural editor grammar based on cadl_frontend/grammar.lark.
// The compiler remains authoritative for type/width and directive validation.
const commaSep1 = rule => seq(rule, repeat(seq(',', rule)));
const commaSep = rule => optional(commaSep1(rule));

module.exports = grammar({
  name: 'cadl',
  extras: $ => [/\s/, $.comment],
  word: $ => $.identifier,
  rules: {
    source_file: $ => repeat(choice(
      $.static_declaration, $.register_declaration,
      $.regfile_declaration, $.flow_declaration,
    )),
    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    comment: _ => token(choice(/\/\/[^\n]*/, /\/\*[^*]*\*+([^/*][^*]*\*+)*\//)),
    type: $ => choice($.primitive_type, $.array_type, 'Instance'),
    primitive_type: _ => token(choice('bf16', 'usize', /[fui][1-9][0-9]*c*/)),
    array_type: $ => seq('[', $.primitive_type, repeat(seq(';', $.number)), ']'),
    number: _ => token(choice(
      /[0-9]+(_[fui][1-9][0-9]*|_bf16)?/,
      /0[sS]?x[0-9a-fA-F]+(_[ui][1-9][0-9]*)?/,
      /0[sS]?b[01]+(_[ui][1-9][0-9]*)?/,
      /0[sS]?o[0-7]+(_[ui][1-9][0-9]*)?/,
      /[0-9]+'[sS]?[bB][01]+(_[ui][1-9][0-9]*)?/,
      /[0-9]+'[sS]?[oO][0-7]+(_[ui][1-9][0-9]*)?/,
      /[0-9]+'[sS]?[dD][0-9]+(_[ui][1-9][0-9]*)?/,
      /[0-9]+'[sS]?[hH][0-9a-fA-F]+(_[ui][1-9][0-9]*)?/,
      /([0-9]+\.[0-9]+([eE][+-]?[0-9]+)?|[0-9]+[eE][+-]?[0-9]+)(_(bf16|f32|f64))?/,
    )),
    string: _ => /"[^"]*"/,
    boolean: _ => choice('true', 'false'),
    attribute: $ => seq('#', '[', field('name', $.identifier), optional(seq('(', $._attribute_expression, ')')), ']'),
    _attribute_expression: $ => choice($.expression, $.array_literal),
    array_literal: $ => seq('[', commaSep1($._attribute_expression), ']'),
    static_declaration: $ => seq(repeat($.attribute), 'static', field('name', $.identifier), ':', $.type, optional(seq('=', $.expression)), ';'),
    register_declaration: $ => seq(repeat($.attribute), 'register', field('name', $.identifier), ':', $.type, ';'),
    regfile_declaration: $ => seq('regfile', field('name', $.identifier), '(', $.number, ',', $.number, ')', ';'),
    flow_declaration: $ => seq(repeat($.attribute), choice('flow', 'rtype'), field('name', $.identifier), '(', commaSep($.parameter), ')', field('body', choice(';', $.block))),
    parameter: $ => seq(field('name', $.identifier), ':', $.type),
    block: $ => seq('{', repeat($._statement), '}'),
    _statement: $ => choice(
      $.expression_statement, $.assignment_statement, $.return_statement,
      $.guard_statement, $.do_while_statement, $.if_statement,
      $.directive, $.spawn_statement, $.static_declaration,
    ),
    expression_statement: $ => seq($.expression, ';'),
    assignment_statement: $ => seq(optional('let'), field('left', $.expression), optional(seq(':', $.type)), '=', field('right', $.expression), ';'),
    return_statement: $ => seq('return', commaSep1($.expression), ';'),
    guard_statement: $ => seq('[', field('condition', $.expression), ']', ':', $._statement),
    do_while_statement: $ => seq('with', repeat($.with_binding), 'do', field('body', choice(';', $.block)), 'while', field('condition', $.expression), ';'),
    with_binding: $ => seq(field('name', $.identifier), ':', $.primitive_type, '=', '(', optional($.expression), ',', optional($.expression), ')'),
    if_statement: $ => seq('if', field('condition', $.expression), field('consequence', $.block), optional(seq('else', field('alternative', $.block)))),
    directive: $ => seq('[[', field('name', $.identifier), optional(seq('(', $.expression, ')')), ']]'),
    spawn_statement: $ => seq('spawn', $.block),
    expression: $ => choice($.binary_expression, $.unary_expression, $._postfix_expression),
    binary_expression: $ => choice(...[
      ['||', 1], ['|', 2], ['^', 3], ['==', 4], ['!=', 4],
      ['&', 5], ['&&', 5], ['<', 6], ['<=', 6], ['>', 6], ['>=', 6],
      ['<<', 7], ['>>', 7], ['+', 8], ['-', 8], ['*', 9], ['/', 9], ['%', 9],
    ].map(([operator, precedence]) => prec.left(precedence, seq(
      field('left', $.expression), field('operator', operator), field('right', $.expression),
    )))),
    unary_expression: $ => prec(10, seq(choice('-', '!', '~'), $._postfix_expression)),
    _postfix_expression: $ => choice($.index_expression, $.slice_expression, $._primary_expression),
    index_expression: $ => prec(11, seq(field('value', $._postfix_expression), '[', commaSep1($.expression), ']')),
    slice_expression: $ => prec(11, seq(field('value', $._postfix_expression), '[', $.expression, choice(seq(':', $.expression), seq('+', ':', optional($.expression))), ']')),
    _primary_expression: $ => choice(
      $.identifier, $.number, $.string, $.boolean, $.parenthesized_expression,
      $.call_expression, $.cast_expression, $.bitcast_expression,
      $.if_expression, $.select_expression, $.aggregate_expression,
    ),
    parenthesized_expression: $ => seq('(', commaSep1($.expression), ')'),
    call_expression: $ => seq(field('function', $.identifier), '(', commaSep($.expression), ')'),
    cast_expression: $ => seq(field('function', choice('$signed', '$unsigned', '$f32', '$f64', '$int', '$uint')), '(', $.expression, ')'),
    bitcast_expression: $ => seq('bitcast', '<', $.primitive_type, '>', '(', $.expression, ')'),
    if_expression: $ => seq('if', field('condition', $.expression), '{', field('consequence', $.expression), '}', 'else', '{', field('alternative', $.expression), '}'),
    select_expression: $ => seq('sel', '{', repeat1($.select_arm), '}'),
    select_arm: $ => seq($.expression, ':', $.expression, ','),
    aggregate_expression: $ => seq('{', commaSep1($.expression), '}'),
  },
});
